# m4b-merge

./: .coderabbit.yaml  .dockerignore  .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  DOC_STYLE_ANALYSIS.md  Dockerfile  Dockerfile.ubuntu  LICENSE  README.md  README.rst  __main__.py  clippy.toml  m4b-merge.sh  renovate.json5  requirements-docker.txt  requirements.txt  rustfmt.toml  setup-docker.py  setup.py
.github/: dependabot.yml
.github/.workflows/: pypi-publish.yml  python-package-test.yml
.github/workflows/: build.yml  ci.yml  docker-publish-ubuntu.yml  docker-publish.yml  pr-cleanup.yml  pypi-publish.yml  python-package-test.yml  release-please.yml  release.yml
.sisyphus/: boulder.json
.sisyphus/drafts/: m4b-parity-comparison.md  m4b-tool-to-tone-migration.md
.sisyphus/notepads/api-network-hang-diagnosis/: decisions.md  learnings.md
.sisyphus/notepads/fix-gosu-deprecation/: learnings.md
.sisyphus/notepads/fix-rust-critical-bugs/: COMPLETION-REPORT.md
.sisyphus/plans/: fix-rust-critical-bugs.md  m4b-parity-comparison.md  m4b-tool-to-tone-migration.md  rust-rewrite.md
docker/: Dockerfile  entrypoint.sh  requirements.txt
docker-alt/: entrypoint.sh
m4bmerge/: audible_helper.py  audiblehelper.py  config.py  core.py  helpers.py  m4b_helper.py
src/: api.rs  audio.rs  chapters.rs  config.rs  discovery.rs  lib.rs  main.rs  merge.rs  metadata.rs  processor.rs  tagging.rs
src/api/: audible.rs  audiobookdb.rs  mod.rs
src/audio/: ffmpeg.rs
src/m4b_merge/: __init__.py  __main__.py  audible_helper.py  config.py  helpers.py  m4b_helper.py
tests/: chapter_integration.rs  generate_test_data.sh  integration.rs  test_audible.py  test_m4b_merge.py  test_multiple_m4b_merge.py  test_multiple_mp3_merge.py  test_single_m4b_merge.py  test_single_mp3_merge.py
(+12 files in other folders)
