[package]
name = "m4b-merge"
version = "0.1.0"
edition = "2024"
description = "A CLI tool which outputs consistently sorted, tagged, single m4b files"
authors = ["djdembeck"]

[dependencies]
clap = { version = "4.0", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1.0", features = ["full"] }
tokio-retry = "0.3"
anyhow = "1.0"
thiserror = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"
# ffmpeg-next = { version = "6.0", optional = true }  # Requires FFmpeg development libraries (libavutil.pc, etc.)
mp4ameta = "0.8"
sanitize-filename = "0.5"
tempfile = "3.0"
walkdir = "2.5"
natord = "1.0"
regex = "1.10"
