[package]
name = "m4b-merge"
version = "0.1.0"
edition = "2021"
description = "A CLI tool which outputs consistently sorted, tagged, single m4b files"
authors = ["djdembeck"]
license = "MIT"
repository = "https://github.com/djdembeck/m4b-merge"
homepage = "https://github.com/djdembeck/m4b-merge"
rust-version = "1.70"

[dependencies]
clap = { version = "4.0", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.11.27", features = ["json"] }
tokio = { version = "1.13.1", features = ["rt-multi-thread", "macros", "fs", "io-util"] }
tokio-retry = "0.3"
anyhow = "1.0"
thiserror = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
# ffmpeg-next = { version = "6.0", optional = true }  # Requires FFmpeg development libraries (libavutil.pc, etc.)
mp4ameta = "0.11"
sanitize-filename = "0.5"
tempfile = "3.13"
walkdir = "2.5"
natord = "1.0"
regex = "1.10"
